[BUGFIX] Remove visible elements in preview mode
Reviewed-on: https://review.typo3.org/22090
Tested-by: Aske Ertmann
Original-Commit-Hash: 43d0e910cd50fce3f625f3526a60ff5b45a619fb

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -35,7 +35,7 @@
 	position: fixed;
 	top: $unit;
 	bottom: 0;
-	right: -$inspectorWidth;
+	right: -($inspectorWidth + 1px);
 	width: $inspectorWidth;
 	background-color: $grayDark;
 	z-index: 10014;
