--- a/TYPO3.Neos/Resources/Private/Styles/TopBar/_TopBar.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/TopBar/_TopBar.scss
@@ -7,6 +7,7 @@
 	background-color: $grayDark;
 	height: $unit;
 	border-bottom: 1px solid $grayLight;
+	display: none;
 
 	#neos-user-actions {
 		float: right;
